--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media.css">
-    <title>Document</title>
+    <title>Web developer</title>
 </head>
 <body>
 
