--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                         <div class="footer-content">
                             
-                            <a  class="footer-content-button" href="#">Связаться Вконтакте</a>
+                            <a  class="footer-content-button" href="https://vk.com/abdul221">Связаться Вконтакте</a>
 
                             <p> Напишите мне, чтобы заказать или узнать стоимость верстки вашего проекта</p>
                         </div>
